fpp_parser/src/tests/parse-error.ref.txt
error: syntax error
 --> [ local path prefix ]/parse-error.fpp:5:1
  |
5 | + c
  | ^ module member expected
  |
  = note: expected one of [Keyword(Type), Keyword(Array), Keyword(Constant), Keyword(Enum), Keyword(Struct), Keyword(Component), Keyword(Active), Keyword(Passive), Keyword(Queued), Keyword(Interface), Keyword(Module), Keyword(Port), Keyword(State), Keyword(Topology), Keyword(Include), Keyword(Locate)]
  = note: got Plus

error: syntax error
 --> [ local path prefix ]/parse-error.fpp:7:1
  |
7 | + c
  | ^ module member expected
  |
  = note: expected one of [Keyword(Type), Keyword(Array), Keyword(Constant), Keyword(Enum), Keyword(Struct), Keyword(Component), Keyword(Active), Keyword(Passive), Keyword(Queued), Keyword(Interface), Keyword(Module), Keyword(Port), Keyword(State), Keyword(Topology), Keyword(Include), Keyword(Locate)]
  = note: got Plus

error: syntax error
  --> [ local path prefix ]/parse-error.fpp:14:17
   |
14 |     async input i: d -> d
   |                 ^ unexpected token
   |
   = note: expected Keyword(Port)
   = note: got Identifier

error: syntax error
  --> [ local path prefix ]/parse-error.fpp:18:53
   |
18 |       ) severity warning low format "hello" throttle 1
   |  _____________________________________________________^
19 | |
   | |_^ unexpected end of file
   |
   = note: expected RightCurly
   = note: got EOF

